CHANGES

- For 34 tests, add an extra attribute to dbic_util to allow a switch between mysql and SQLite
- Explicitly set batch_id to 0 in the run model create for case where no batch id is set.
- Remove expected_cycle_count from run model create and template.
- Remove configure run pairing from run model create.
- Remove id_run_pair from template creating the view. 
- Make id_user NOT NULL with no default

release 75.6
 - extended inline index to read 2
 - hardcoded link for enigmatic authentication (not mod perl url) page so that the page
   is accessible from the server on sfweb, where enigmatic is not deployed;
   uncomment old code to restore the relative to the server root link for testing
 - apache2.2 compatible configuration files to run the tracking server under
   default apache version for Ubuntu precise; virtual host definitions in
   stand-alone files allow for dynamic inclusion of virtual hosts
 - fixed occasional authentication problem (inability of a particular thread to load
   additional modules due to the fact that on a second invocation of npg script in the
   same server thread @INC array is not extended since BEGIN block is not run) when
   running under apache2.2 by extending the server @INC array at server start up time 
 - bam, cram, etc files access is prohibited from the runfolder directories listings,
   however, these files are visible in listings
 - more convenient sorting order of directories and files in the runfolder directories
   listings
 - directory index CSS changed to get a margin on the left; brighter color scheme
   introduced
 - Build.PL file extended to ensure that the shebang line of CGI scripts is
   set to the Perl interpreter that is used for deployment
 - explicit setting of PATH is removed from CGI scripts that do not use shell commands
 - SVN-dependant VERSION removed from CGI scripts
 - where necessary, PERL5LIB of CGI scripts is extended