@@ -21,7 +21,7 @@ use t::useragent;
 use Readonly; Readonly::Scalar our $VERSION => do { my ($r) = q$Revision: 11471 $ =~ /(\d+)/msx; $r; };
 
 local $ENV{dev} = 'test';
-my $mock_schema = t::dbic_util->new->test_schema();
+my $mock_schema = t::dbic_util->new ( { db_to_use => q{mysql}, })->test_schema();
 
 ## no critic (ValuesAndExpressions::ProhibitMagicNumbers)
 
